--- a/index.html
+++ b/index.html
@@ -4,14 +4,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>GoIt</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>Hello World</h2>
-    <h3>Hello World</h3>
-    <h4>Hello World</h4>
-    <h5>Hello World</h5>
-    <h6>Check Git</h6>
+    <!--Main-->
+    <div class="main">
+        <!--Main Content-->
+        <div class="main_content">
+            <!--about user-->
+            <div class="about">
+                <h2>Software Developer</h2>
+                <h1>Nelly Kemppi</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+                </p>
+                
+            </div>
+            <!--Projects-->
+            <div class="projects">
+                <h3 class="project_title">Projects</h3>
+                <ol>
+                    <li><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a>
+                    -----
+                    [ HTML5, CSS3 ]</li>
+                    <li><a href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a>
+                    -----[ JavaScript ]</li>
+                    <li><a href="https://kidslike.p.goit.global/">https://kidslike.p.goit.global/</a>
+                    -----[ React.js, Node.js ]</li>
+                </ol>
+            </div>
+            <!--Work-->
+            <div class="work">
+                <h3>Work Experience</h3>
+                <!--company 1-->
+                <div>
+                    <h4>Front-End Developer Freelance</h4>
+                    <p>September 2019 - up to now   |   Country</p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li>Risus commodo viverra maecenas. </li>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
+                    </ul>
+                </div>
+                <!--company 2-->
+                <div>
+                    <h4>Manager Mono New</h4>
+                    <p>March 2015 - October 2018   |   Country</p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua. </li>
+                        <li>Quis ipsum suspendisse ultrices gravida.</li>
+                        <li>Risus commodo viverra maecenas. </li>
+                    </ul>
+                </div>
+                <!--company 3-->
+                <div>
+                    <h4>Manager Mono LLC</h4>
+                    <p>June 2014 - February 2015   |   Country</p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+                        <li>Quis ipsum suspendisse ultrices gravida.</li>
+                        <li>Risus commodo viverra maecenas. </li>
+                    </ul>
+                </div>
+            </div>
+            <!--Education-->
+            <div class="education">
+                <h3>Education</h3>
+                <h4>National University of Radioelectronics</h4>
+                <h4>Manager</h4>
+                <p>September 2009 - June 2014   |   Country</p>
+            </div>
+        </div>
+        <!--Sidebar-->
+        <aside class="sidebar">
+            <img src="img/photo_2022-11-12_17-11-10.jpg" alt="user photo">
+            <!--contacts-->
+            <div>
+                <h3>Contacts</h3>
+                <div>
+                    <p>C: <a href="tel:+358---------">+358---------</a></p>
+                    <p>E: <a href="mailto:nelly.kemppi@gmail.com">nelly.kemppi@gmail.com</a></p>
+                </div>
+            </div>
+            <!--TechSkills-->
+            <div>
+                <h3>Tech Skills</h3>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>GIT</li>
+                    <li>WebPack</li>
+                    <li>JavaScript</li>
+                    <li>React.js</li>
+                    <li>Node.js</li>
+                </ul>
+            </div>
+            <!--Soft Skills-->
+            <div>
+                <h3>Soft Skills</h3>
+                <ul>
+                    <li>Scrum</li>
+                    <li>Agile</li>
+                    <li>GTD</li>
+                    <li>Teamwork</li>
+                </ul>
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
