--- a/index.html
+++ b/index.html
@@ -84,36 +84,42 @@
         </div>
         <!--Sidebar-->
         <aside class="sidebar">
-            <img src="img/photo_2022-11-12_17-11-10.jpg" alt="user photo">
+            <img src="img/photo_2022-11-12_17-11-10.jpg" alt="user photo" class="photo">
             <!--contacts-->
-            <div>
-                <h3>Contacts</h3>
+            <div class="contacts">
+                <h3 class="sidebar_title">Contacts</h3>
                 <div>
-                    <p>C: <a href="tel:+358---------">+358---------</a></p>
-                    <p>E: <a href="mailto:nelly.kemppi@gmail.com">nelly.kemppi@gmail.com</a></p>
+                    <p>
+                        <span class="contact_type"> C:</span>
+                        <a href="tel:+358---------" class="contact_link">+358---------</a>
+                    </p>
+                    <p>
+                        <span class="contact_type"> E:</span>
+                        <a href="mailto:nelly.kemppi@gmail.com" class="contact_link">nelly.kemppi@gmail.com</a>
+                    </p>
                 </div>
             </div>
             <!--TechSkills-->
-            <div>
-                <h3>Tech Skills</h3>
-                <ul>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>GIT</li>
-                    <li>WebPack</li>
-                    <li>JavaScript</li>
-                    <li>React.js</li>
-                    <li>Node.js</li>
+            <div class="tech_skills">
+                <h3 class="sidebar_title">Tech Skills</h3>
+                <ul class="tech_skills_list">
+                    <li class="tech_skills_item"> <span class="tech_skills_text">HTML5</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">CSS3</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">GIT</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">WebPack</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">JavaScript</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">React.js</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">Node.js</span></li>
                 </ul>
             </div>
             <!--Soft Skills-->
-            <div>
-                <h3>Soft Skills</h3>
-                <ul>
-                    <li>Scrum</li>
-                    <li>Agile</li>
-                    <li>GTD</li>
-                    <li>Teamwork</li>
+            <div class="soft_skills">
+                <h3 class="sidebar_title">Soft Skills</h3>
+                <ul class="soft_skills_list">
+                    <li class="soft_skills_item"><span class="soft_skills_text">Scrum</span></li>
+                    <li class="soft_skills_item"><span class="soft_skills_text">Agile</span></li>
+                    <li class="soft_skills_item"><span class="soft_skills_text">GTD</span></li>
+                    <li class="soft_skills_item"><span class="soft_skills_text">Teamwork</span></li>
                 </ul>
             </div>
         </aside>
