a bit changed info

--- a/index.html
+++ b/index.html
@@ -17,69 +17,79 @@
         <div class="main_content">
             <!--about user-->
             <div class="about">
-                <h2>Software Developer</h2>
-                <h1>Nelly Kemppi</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+                <h2 class="about_position">Software Developer</h2>
+                <h1 class="about_name">Nelly Kemppi</h1>
+                <p class="about_description">
+                    Junior programmer. Undergraduate student of Metropolia, University of applied science.
                 </p>
                 
             </div>
             <!--Projects-->
             <div class="projects">
-                <h3 class="project_title">Projects</h3>
-                <ol>
-                    <li><a href="https://hellen.p.goit.global/">https://hellen.p.goit.global/</a>
-                    -----
-                    [ HTML5, CSS3 ]</li>
-                    <li><a href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a>
-                    -----[ JavaScript ]</li>
-                    <li><a href="https://kidslike.p.goit.global/">https://kidslike.p.goit.global/</a>
-                    -----[ React.js, Node.js ]</li>
+                <h3 class="title">Projects</h3>
+                <ol class="projects_list">
+                    <li class="project_item">
+                        <span class="project">
+                            <a href="https://hellen.p.goit.global/" class="project_link">https://hellen.p.goit.global/</a>
+                            ----------
+                            <span class="project_bracket"> [</span> HTML5, CSS3 <span class="project_bracket">]</span>
+                        </span>
+                    </li>
+                    <li class="project_item">
+                        <span class="project">
+                            <a href="https://cryptohub.p.goit.global/" class="project_link">https://cryptohub.p.goit.global/</a>
+                            -----<span class="project_bracket"> [</span> JavaScript <span class="project_bracket">]</span>
+                        </span>
+                    </li>
+                    <li class="project_item">
+                        <span class="project">
+                            <a href="https://kidslike.p.goit.global/" class="project_link">https://kidslike.p.goit.global/</a>
+                            ---------<span class="project_bracket"> [</span> React.js, Node.js <span class="project_bracket">]</span>
+                        </span>
+                    </li>
                 </ol>
             </div>
             <!--Work-->
             <div class="work">
-                <h3>Work Experience</h3>
+                <h3 class="title">Work Experience</h3>
                 <!--company 1-->
                 <div>
-                    <h4>Front-End Developer Freelance</h4>
-                    <p>September 2019 - up to now   |   Country</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>Risus commodo viverra maecenas. </li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
+                    <h4 class="work_position">Front-End Developer <span class="organisation">Freelance</span> </h4>
+                    <p class="period">September 2019 - up to now   <span class="line">|</span>   Country</p>
+                    <ul class="work_list">
+                        <li class="work_list_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
+                        <li class="work_list_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li class="work_list_item">Risus commodo viverra maecenas. </li>
+                        <li class="work_list_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> 
                     </ul>
                 </div>
                 <!--company 2-->
                 <div>
-                    <h4>Manager Mono New</h4>
-                    <p>March 2015 - October 2018   |   Country</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua. </li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas. </li>
+                    <h4 class="work_position"> Manager <span class="organisation">Mono New</span> </h4>
+                    <p class="period">March 2015 - October 2018   <span class="line">|</span>   Country</p>
+                    <ul class="work_list">
+                        <li class="work_list_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua. </li>
+                        <li class="work_list_item">Quis ipsum suspendisse ultrices gravida.</li>
+                        <li class="work_list_item">Risus commodo viverra maecenas. </li>
                     </ul>
                 </div>
                 <!--company 3-->
                 <div>
-                    <h4>Manager Mono LLC</h4>
-                    <p>June 2014 - February 2015   |   Country</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas. </li>
+                    <h4 class="work_position">Manager <span class="organisation">Mono LLC</span> </h4>
+                    <p class="period">June 2014 - February 2015   <span class="line">|</span>   Country</p>
+                    <ul class="work_list">
+                        <li class="work_list_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+                        <li class="work_list_item">Quis ipsum suspendisse ultrices gravida.</li>
+                        <li class="work_list_item">Risus commodo viverra maecenas. </li>
                     </ul>
                 </div>
             </div>
             <!--Education-->
             <div class="education">
-                <h3>Education</h3>
-                <h4>National University of Radioelectronics</h4>
-                <h4>Manager</h4>
-                <p>September 2009 - June 2014   |   Country</p>
+                <h3 class="title">Education</h3>
+                <h4 class="university">Metropolia University of applied science</h4>
+                <h4 class="spec">Smart Systems</h4>
+                <p class="period">September 2017 - till now   <span class="line">|</span>   Finland</p>
             </div>
         </div>
         <!--Sidebar-->
@@ -91,7 +101,7 @@
                 <div>
                     <p>
                         <span class="contact_type"> C:</span>
-                        <a href="tel:+358---------" class="contact_link">+358---------</a>
+                        <a href="tel:+358452334607" class="contact_link">+358452334607</a>
                     </p>
                     <p>
                         <span class="contact_type"> E:</span>
@@ -103,22 +113,22 @@
             <div class="tech_skills">
                 <h3 class="sidebar_title">Tech Skills</h3>
                 <ul class="tech_skills_list">
-                    <li class="tech_skills_item"> <span class="tech_skills_text">HTML5</span></li>
-                    <li class="tech_skills_item"> <span class="tech_skills_text">CSS3</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">Python</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">C++</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">C</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">HTML</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">CSS</span></li>
                     <li class="tech_skills_item"> <span class="tech_skills_text">GIT</span></li>
-                    <li class="tech_skills_item"> <span class="tech_skills_text">WebPack</span></li>
-                    <li class="tech_skills_item"> <span class="tech_skills_text">JavaScript</span></li>
-                    <li class="tech_skills_item"> <span class="tech_skills_text">React.js</span></li>
-                    <li class="tech_skills_item"> <span class="tech_skills_text">Node.js</span></li>
+                    <li class="tech_skills_item"> <span class="tech_skills_text">Java</span></li>
                 </ul>
             </div>
             <!--Soft Skills-->
             <div class="soft_skills">
                 <h3 class="sidebar_title">Soft Skills</h3>
                 <ul class="soft_skills_list">
-                    <li class="soft_skills_item"><span class="soft_skills_text">Scrum</span></li>
-                    <li class="soft_skills_item"><span class="soft_skills_text">Agile</span></li>
-                    <li class="soft_skills_item"><span class="soft_skills_text">GTD</span></li>
+                    <li class="soft_skills_item"><span class="soft_skills_text">Fast Learner</span></li>
+                    <li class="soft_skills_item"><span class="soft_skills_text">Time management</span></li>
+                    <li class="soft_skills_item"><span class="soft_skills_text">Adaptability</span></li>
                     <li class="soft_skills_item"><span class="soft_skills_text">Teamwork</span></li>
                 </ul>
             </div>
